--- a/Hackathon2023/Hackathon2023.csproj
+++ b/Hackathon2023/Hackathon2023.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.5" />
+    <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.6" />
+    <PackageReference Include="Markdig" Version="0.32.0" />
   </ItemGroup>
 
 </Project>
